--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background: linear-gradient(to right,#000428,#004e92);
+  height: 100vh;
+  width: 100vw;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg{
+  background: linear-gradient(to right,#000428,#004e92);
+  /* position: absolute; */
+  top: 0;
+  width: 98vw;
+  z-index: 100;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-brand{
+  margin-left: 40vw;
+  font-size: 4.5vh;
+}
+.items{
+margin-top: 90px;
+  /* border: 2px solid white; */
+  border-radius: 20px;
+  width: 20vw;
+  height: 20vw;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  object-fit: contain;
+background-color: transparent;
+  transition: height 0.7s ease-in-out,width 0.7s ease-in-out;
+  /* opacity: 0.5; */
+}
+.info{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.flexing{
+  display: flex;
+  padding: 10px;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image{
+  border: 2px solid white;
+object-fit: contain;
+width: 98%;
+height: 78%;
+border-radius: 20px;
+}
+.image img{
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+}
+.button{
+  width: 18vw;
+  margin-bottom: 10px;
+}
+.items:hover{
+  height: 25vw;
+  width: 25vw;
 }
